--- a/css.css
+++ b/css.css
@@ -33,5 +33,21 @@ justify-content: space-around;
 
 
 #rightPanel {
-margin-top: 350px;
+margin-top: 250px;
+}
+
+strong {
+display: block;
+padding: 10px;
+background: white;
+width: 100px;
+}
+
+#getMappings {
+display: block;
+background: white;
+margin-left: 40px;
+width: 100px;
+height: 100px;
+padding: 10px;
 }
