--- a/css.css
+++ b/css.css
@@ -4,7 +4,8 @@ ul { list-style: none; }
 
 #svgbasics { 
   position: absolute; left: 0px; top: 0px; 
-  border: solid 0px #484; z-index: -100; 
+  border: solid 0px #484; 
+  z-index: 100;
 }
 
 .draggable { }
@@ -20,6 +21,7 @@ ul { list-style: none; }
 margin: 20px;
 display: flex;
 justify-content: space-around;
+background: #eee;
 }
 
 #leftPanel, #rightPanel {
