--- a/css.css
+++ b/css.css
@@ -6,6 +6,7 @@ ul { list-style: none; }
   position: absolute; left: 0px; top: 0px; 
   border: solid 0px #484; 
   z-index: 100;
+  pointer-events: none;
 }
 
 .draggable { }
