--- a/css.css
+++ b/css.css
@@ -2,8 +2,8 @@ article, aside, figure, footer, header, hgroup, menu, nav, section { display: bl
 body { font-family: Arial; font-size: 11px; }
 ul { list-style: none; }
 
-#svgbasics { 
-  position: absolute; left: 0px; top: 0px; 
+#svgcanvas { 
+  position: absolute; left: 0px; top: 0px; bottom: 0; 
   border: solid 0px #484; 
   z-index: 100;
   pointer-events: none;
